Flexbox implementado en los estilos css (Closes #1)

--- a/index.html
+++ b/index.html
@@ -108,25 +108,20 @@
     </section>
     <!--Información-->
     <section class="section-info">
-      <div class="container-fluid animated  fadeIn delay-1s">
-        <div class="row justify-content-center py-3">
-          <div class="col-12 col-xl-6 text-center">
-            <h3 class="text-light">3 modalidades:</h3>
-            <h3 class="text-light font-weight-bold">on line - a domicilio - en centros médicos</h3>
-            <hr class="line">
-            <p class="text-light mt-xl-4">
-              Para ayudar a todas las personas que padecieron covid-19, hemos creado un programa de rehabilitación
-              integral y personalizado que ayuda a resolver los síntomas residuales producto de la enfermedad. No solo
-              para pacientes que estuvieron hospitalizados, si no también quienes no presentaron síntomas ya que de
-              igual forma pueden tener secuelas manifestadas como un estado de fatiga persiste, pérdida de fuerza,
-              alteraciones respiratorias y cardiacas, entre otras, que te limitan en las actividades de tu vida.
-              <br />
-              <br />
-              La rehabilitación funcional para los recuperados de covid-19 se adaptará según
-              las condiciones de la persona y la gravedad de su enfermedad.
-            </p>
-          </div>
-        </div>
+      <div class="contenedor-informacion">
+        <h3 class="titulo">3 modalidades: <br/><b>on line - a domicilio - en centros médicos</b></h3>
+        <hr class="line">
+        <p>
+          Para ayudar a todas las personas que padecieron covid-19, hemos creado un programa de rehabilitación
+          integral y personalizado que ayuda a resolver los síntomas residuales producto de la enfermedad. No solo
+          para pacientes que estuvieron hospitalizados, si no también quienes no presentaron síntomas ya que de
+          igual forma pueden tener secuelas manifestadas como un estado de fatiga persiste, pérdida de fuerza,
+          alteraciones respiratorias y cardiacas, entre otras, que te limitan en las actividades de tu vida.
+        </p>
+        <p>
+          La rehabilitación funcional para los recuperados de covid-19 se adaptará según
+          las condiciones de la persona y la gravedad de su enfermedad.
+        </p>
       </div>
       <div class="container">
         <div class="row">
@@ -147,9 +142,10 @@
                   </h2>
                 </div>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                  <div class="card-body p-5 ml-3">
+                  <div class="card-body p-3 ml-5">
                     <ul class="">
-                      <li class="mb-4">Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
+                      <li class="mb-4">
+                        Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
                         presente una
                         reducción de su funcionalidad previa, una discapacidad recientemente adquirida a causa de la
                         enfermedad o una persistencia de síntomas residuales que interfieran en sus actividades de la
@@ -176,9 +172,10 @@
                   </h2>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                  <div class="card-body p-5 ml-3">
+                  <div class="card-body p-3 ml-5">
                     <ul class="">
-                      <li class="mb-4">Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
+                      <li class="mb-4">
+                        Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
                         presente una
                         reducción de su funcionalidad previa, una discapacidad recientemente adquirida a causa de la
                         enfermedad o una persistencia de síntomas residuales que interfieran en sus actividades de la
@@ -205,7 +202,7 @@
                   </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                  <div class="card-body p-5 ml-3">
+                  <div class="card-body p-3 ml-5">
                     <ul class="">
                       <li class="mb-4">Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
                         presente una
@@ -234,7 +231,7 @@
                   </h2>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-                  <div class="card-body p-5 ml-3">
+                  <div class="card-body p-3 ml-5">
                     <ul class="">
                       <li class="mb-4">Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
                         presente una
@@ -255,13 +252,9 @@
     </section>
     <!--Pie de Pagina-->
     <footer class="bg-footer">
-      <div class="container animated  fadeIn delay-1s">
-        <div class="row justify-content-center">
-          <div class="col-12 col-xl-6 text-center py-5 py-xl-5" data-aos="fade-zoom">
-            <p class="text-light">Para acceder a este programa debes inscribirte en el formulario.</p>
+      <div class="contenedor-footer">
+            <p>Para acceder a este programa debes inscribirte en el formulario.</p>
             <button class="btn btn-principal text-uppercase font-weight-bold">Quiero inscribirme</button>
-          </div>
-        </div>
       </div>
     </footer>
   </main>
