--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-md navbar-light navbar-color fixed-top">
     <a class="navbar-brand mx-auto my-2 animated  fadeIn" href="#">
       <img class="logo" src="assets/img/logo.png" alt="">
     </a>
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      <div id="carouselExampleControls" class="carousel slide d-none d-lg-block animated  fadeLeft delay-0s"
+      <div id="carouselExampleControls" class="carousel slide d-none d-lg-block animated  fadeLeft delay-0s mt-5"
         data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -142,7 +142,7 @@
                   </h2>
                 </div>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                  <div class="card-body p-3 ml-5">
+                  <div class="card-body p-3 ml-3 ml-sm-3 ml-xl-5">
                     <ul class="">
                       <li class="mb-4">
                         Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
