--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   </h2>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                  <div class="card-body p-3 ml-5">
+                  <div class="card-body p-3 ml-3 ml-sm-3 ml-xl-5">
                     <ul class="">
                       <li class="mb-4">
                         Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
@@ -202,7 +202,7 @@
                   </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                  <div class="card-body p-3 ml-5">
+                  <div class="card-body p-3 ml-3 ml-sm-3 ml-xl-5">
                     <ul class="">
                       <li class="mb-4">Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
                         presente una
@@ -231,7 +231,7 @@
                   </h2>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-                  <div class="card-body p-3 ml-5">
+                  <div class="card-body p-3 ml-3 ml-sm-3 ml-xl-5">
                     <ul class="">
                       <li class="mb-4">Paciente con diagnóstico de COVID-19 recuperado o en fase de recuperación que
                         presente una
