Item-caption reparado (Closes #4).

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </section>
     <!--Pie de Pagina-->
     <footer class="bg-footer">
-      <div class="contenedor-footer">
+      <div class="contenedor-footer" data-aos="zoom-in">
             <p>Para acceder a este programa debes inscribirte en el formulario.</p>
             <button class="btn btn-principal text-uppercase font-weight-bold">Quiero inscribirme</button>
       </div>
